--- a/app/_scss/_header.scss
+++ b/app/_scss/_header.scss
@@ -133,7 +133,7 @@
         }
 
         ul {
-            margin: 0 145px 0 525px;
+            margin: 0 7em 0 35em; // ~ 0 145px 0 525px;
             text-align: left;
             height: 140px;
 
