--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -2,6 +2,7 @@
 @import "compass/css3";
 @import "compass/utilities";
 @import "susy";
+@import "breakpoint";
 
 // HTML5 BOILERPLATE INCLUDE
 @import "_m5bp.scss";
